<resources>
    <string name="app_name">Landmark</string>

    <string name="ok">0k</string>
    <string name="loading">Loading…</string>
    <string name="refreshing">Refreshing…</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="next">Continue</string>
    <string name="lat_lng_location">%s,%s</string>

    <string name="authentication_sign_in">Sign In</string>
    <string name="authentication_sign_up">Sign Up</string>
    <string name="authentication_need_sign_in">To add a new note, you\'ll need to sign in.</string>

    <string name="add_new_note">Add New Note</string>
    <string name="new_note_at_location">New note at location:</string>
    <string name="new_note_at_my_location">New note at my location:</string>
    <string name="new_note_text">What do you like about this place? (280 characters)</string>

    <string name="search_hint">Search by text or user name</string>
    <string name="enable_location_services">Please enable location services</string>

    <string name="screen_search_title">Search</string>
    <string name="screen_add_note_title">New note</string>
    <string name="screen_sign_in">Sign In</string>
    <string name="screen_sign_up">Sign Up</string>
    <string name="screen_sign_out">Sign Out</string>
    <string name="screen_settings">Settings</string>

    <!-- Accessibility -->
    <string name="accessibility_search_note">search note</string>
    <string name="accessibility_close">close</string>
    <string name="accessibility_save_note">save note</string>

    <!-- Error-->
    <string name="error_generic_message">Something went wrong!</string>

    <!-- About-->
    <string name="about">About\nGustavo Enriquez\ntavoeh@gmail.com</string>


</resources>