<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mapFragment">

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.tigerspike.landmark.presentation.map.MapFragment"
        tools:layout="@layout/fragment_map">
        <action
            android:id="@+id/action_to_searchFragment"
            app:destination="@id/searchFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

        <action
            android:id="@+id/action_to_addNoteFragment"
            app:destination="@id/addNoteFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_to_signInFragment"
            app:destination="@id/signInFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.tigerspike.landmark.presentation.search.SearchFragment"
        android:label="@string/screen_search_title"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/addNoteFragment"
        android:name="com.tigerspike.landmark.presentation.notes.SaveNoteFragment"
        android:label="@string/screen_add_note_title"
        tools:layout="@layout/fragment_save_note">
        <argument
            android:name="location"
            app:argType="com.google.android.gms.maps.model.LatLng" />
    </fragment>

    <fragment
        android:id="@+id/signInFragment"
        android:name="com.tigerspike.landmark.presentation.authentication.SignInFragment"
        android:label="@string/screen_sign_in"
        tools:layout="@layout/fragment_sign_in">
        <action
            android:id="@+id/action_to_signUpFragment"
            app:destination="@id/signUpFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.tigerspike.landmark.presentation.authentication.SignUpFragment"
        android:label="@string/screen_sign_up"
        tools:layout="@layout/fragment_sign_up" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.tigerspike.landmark.presentation.settings.SettingsFragment"
        android:label="@string/screen_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_to_signInFragment"
            app:destination="@id/signInFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>

</navigation>