<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.tigerspike.landmark.presentation.authentication.AuthenticationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.authentication.SignInFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorSurface"
            android:elevation="4dp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_medium"
            android:gravity="center"
            android:hint="@string/email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.email}"
            android:importantForAutofill="no"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <EditText
            android:id="@+id/txtPassword"
            android:importantForAutofill="no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_medium"
            android:gravity="center"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:text="@={viewModel.password}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintTop_toBottomOf="@id/txtEmail" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_medium"
            android:layout_marginTop="@dimen/space_medium"
            android:text="@string/next"
            app:onClick="@{() -> viewModel.signIn()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtPassword" />

        <Button
            android:id="@+id/btnSignUp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_medium"
            android:text="@string/authentication_sign_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSignIn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>