<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.settings.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSurface"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_medium"
        android:layout_marginHorizontal="@dimen/space_medium"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_medium"
        android:layout_marginTop="@dimen/space_medium"
        android:text="@string/screen_sign_in"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/userName" />

    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_medium"
        android:layout_marginHorizontal="@dimen/space_medium"
        android:text="@string/screen_sign_out"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_medium"
        android:layout_marginTop="@dimen/space_medium"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/space_medium"
        android:text="@string/about"/>

</androidx.constraintlayout.widget.ConstraintLayout>