<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.map.MapFragment">

    <ImageButton
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/space_normal"
        android:layout_marginEnd="@dimen/space_small"
        android:background="@drawable/bg_circle"
        android:contentDescription="@string/accessibility_search_note"
        android:elevation="4dp"
        android:src="@drawable/ic_search"
        app:layout_constraintEnd_toStartOf="@id/btnRefresh"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/space_normal"
        android:layout_marginEnd="@dimen/space_small"
        android:background="@drawable/bg_circle"
        android:contentDescription="@string/accessibility_search_note"
        android:elevation="4dp"
        android:src="@drawable/ic_refresh"
        app:layout_constraintEnd_toStartOf="@id/btnSettings"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/space_normal"
        android:layout_marginEnd="@dimen/space_normal"
        android:background="@drawable/bg_circle"
        android:contentDescription="@string/accessibility_search_note"
        android:elevation="4dp"
        android:src="@drawable/ic_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bsNewNote"
            style="?attr/bottomSheetStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:focusable="true"
            android:padding="@dimen/space_medium"
            app:behavior_hideable="true"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <ImageButton
                android:id="@+id/btnCloseNewNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/actionBarItemBackground"
                android:contentDescription="@string/accessibility_close"
                android:elevation="4dp"
                android:src="@drawable/ic_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_medium"
                android:text="@{item.text}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintEnd_toStartOf="@id/btnCloseNewNote"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Add a note in this location:" />

            <TextView
                android:id="@+id/txtLocation"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:text="@{item.location}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTitle"
                tools:text="Location: 1.0,2.0" />

            <Button
                android:id="@+id/btnAddNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_medium"
                android:text="@string/add_new_note"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtLocation" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnNewNoteAtMyLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/space_medium"
        android:src="@drawable/ic_add"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>